--- a/pom.xml
+++ b/pom.xml
@@ -26,9 +26,17 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>quoco.rest</groupId>
-			<artifactId>core</artifactId>
-			<version>1.0</version>
+			<groupId>team.dexter</groupId>
+			<artifactId>CodeReviewerCommons</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 	</dependencies>
 
