--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=9001
 
 ## MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/reviewee
+spring.datasource.url=jdbc:mysql://mysqldb:3306/reviewee
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
